--- a/src/main/resources/assets/open-please/lang/en_us.json
+++ b/src/main/resources/assets/open-please/lang/en_us.json
@@ -1,4 +1,6 @@
 {
-  "key.openplease.toggle": "Toggle Auto-Open",
+  "key.openplease.toggleopen": "Toggle Auto-Open",
+  "key.openplease.togglesound": "Toggle Sound",
+  "key.openplease.getstates": "Get States",
   "category.openplease": "Open Please!"
 }
